navbar desktop done

--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
           <i class="fa fa-bars"></i>
         </a>
       </nav>
+      <nav class="navbar-desktop flex">
+        <div class="logo-container-desktop flex">
+          <div class="image-container"><img class="nav-logo" src="./images/logo.png" /></div>
+          <p>WEALTHME</p>
+        </div>
+        <div id="link-container-desktop">
+          <ul class="flex">
+            <li><a href="#">Invest</a></li>
+            <li><a href="#">Protect</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><button href="#" class="button-a">Log In</button></li>
+            <li><button href="#" class="button-b">Get Started</button></li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <main></main>
     <footer></footer>
