added intro section, added max-width 1200px

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="#">Invest</a></li>
             <li><a href="#">Protect</a></li>
             <li><a href="#">About Us</a></li>
+            <li><a href="#">Log In</a></li>
           </ul>
         </div>
         <a href="javascript:void(0);" class="icon" onclick="navToggle()">
@@ -49,7 +50,21 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="intro-container">
+        <div class="intro flex">
+          <div class="intro-left">
+            <h1>Wealth management should not be complicated</h1>
+            <p>We've paired personalised wealth management and financial planning with our intelligent investment framework. The result? A financial future that you want and can count on.</p>
+            <button class="button-c">Get Started</button>
+          </div>
+          <div class="image-container intro-img-container">
+            <img id="intro-img" src="./images/intro-img.jpg">
+          </div>
+        </div>
+
+      </section>
+    </main>
     <footer></footer>
     <script src="script.js"></script>
   </body>
