add why-us img, complete why-us section desktop and mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Signika+Negative:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Signika+Negative:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -19,7 +22,9 @@
       <!-- Top Navigation Menu -->
       <nav class="navbar-mobile flex">
         <div class="logo-container-mobile flex">
-          <div class="image-container"><img class="nav-logo" src="./images/logo.png" /></div>
+          <div class="image-container">
+            <img class="nav-logo" src="./images/logo.png" />
+          </div>
           <p>WEALTHME</p>
         </div>
         <div id="link-container-mobile">
@@ -36,7 +41,9 @@
       </nav>
       <nav class="navbar-desktop flex">
         <div class="logo-container-desktop flex">
-          <div class="image-container"><img class="nav-logo" src="./images/logo.png" /></div>
+          <div class="image-container">
+            <img class="nav-logo" src="./images/logo.png" />
+          </div>
           <p>WEALTHME</p>
         </div>
         <div id="link-container-desktop">
@@ -51,19 +58,110 @@
       </nav>
     </header>
     <main>
-      <section class="intro-container">
-        <div class="intro flex">
+      <!-- Introduction-->
+      <section class="intro">
+        <div class="intro-container flex">
           <div class="intro-left">
             <h1>Wealth management should not be complicated</h1>
-            <p>We've paired personalised wealth management and financial planning with our intelligent investment framework. The result? A financial future that you want and can count on.</p>
+            <p>
+              We've paired personalised wealth management and financial planning
+              with our intelligent investment framework. The result? A financial
+              future that you want and can count on.
+            </p>
             <button class="button-c">Get Started</button>
           </div>
           <div class="image-container intro-img-container">
-            <img id="intro-img" src="./images/intro-img.jpg">
+            <img id="intro-img" src="./images/intro-img.jpg" />
           </div>
         </div>
-
       </section>
+      <!-- How investing with us works? Why us?-->
+      <section class="how-investing">
+        <div class="investing-container">
+          <h2>How investing with us works</h2>
+          <h3>We keep it simple for you.</h3>
+          <div class="outer-container">
+            <div class="inner-container">
+              <ol>
+                <li>
+                  <h3>1.</h3>
+                  <p>
+                    Tell us about your current financial situation and your goals.
+                  </p>
+                </li>
+                <li>
+                  <h3>2.</h3>
+                  <p>
+                    Based on your goals and risk appetite, we will build an investment
+                    plan tailored to you.
+                  </p>
+                </li>
+                <li>
+                  <h3>3.</h3>
+                  <p>Our investment plan will adapt according to the state of economy and your standing instructions.</p>
+                </li>
+                <li>
+                  <h3>4.</h3>
+                  <p>You can manage your account on both our desktop and mobile apps, anytime and anywhere.</p>
+                </li>
+                <li>
+                  <h3>5.</h3>
+                  <p>We keep the expense and management fees competitively low and use robust investment framework to monitor your portfolio everyday while you focus on achieving your dreams.</p>
+                </li>
+              </ol>
+              <button class="button-c">Invest Now</button>
+            </div>
+            <div class="image-container">
+              <img src="./images/why-us.png">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- 4 portfolio. Income, Thematic, Cash -->
+      <section class="portfolio">
+        <div class="portfolio-container">
+          <h2>Our Portfolios</h2>
+          <div class="portfolio-grid-container">
+            <div class="portfolio p1">
+              <div class="image-container">
+                <img>
+              </div>
+              <div class="portfolio-desc">
+                <h3></h3>
+                <p></p>
+              </div>
+            </div>
+            <div class="portfolio p2">
+              <div class="image-container">
+                <img>
+              </div>
+              <div class="portfolio-desc">
+                <h3></h3>
+                <p></p>
+              </div>
+            </div>
+            <div class="portfolio p3">
+              <div class="image-container">
+                <img>
+              </div>
+              <div class="portfolio-desc">
+                <h3></h3>
+                <p></p>
+              </div>
+            </div>
+            <div class="portfolio p4">
+              <div class="image-container">
+                <img>
+              </div>
+              <div class="portfolio-desc">
+                <h3></h3>
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Our team -->
     </main>
     <footer></footer>
     <script src="script.js"></script>
