added portfolio section desktop mobile and added images

--- a/index.html
+++ b/index.html
@@ -78,87 +78,86 @@
       <!-- How investing with us works? Why us?-->
       <section class="how-investing">
         <div class="investing-container">
-          <h2>How investing with us works</h2>
-          <h3>We keep it simple for you.</h3>
-          <div class="outer-container">
-            <div class="inner-container">
-              <ol>
-                <li>
-                  <h3>1.</h3>
-                  <p>
-                    Tell us about your current financial situation and your goals.
-                  </p>
-                </li>
-                <li>
-                  <h3>2.</h3>
-                  <p>
-                    Based on your goals and risk appetite, we will build an investment
-                    plan tailored to you.
-                  </p>
-                </li>
-                <li>
-                  <h3>3.</h3>
-                  <p>Our investment plan will adapt according to the state of economy and your standing instructions.</p>
-                </li>
-                <li>
-                  <h3>4.</h3>
-                  <p>You can manage your account on both our desktop and mobile apps, anytime and anywhere.</p>
-                </li>
-                <li>
-                  <h3>5.</h3>
-                  <p>We keep the expense and management fees competitively low and use robust investment framework to monitor your portfolio everyday while you focus on achieving your dreams.</p>
-                </li>
-              </ol>
-              <button class="button-c">Invest Now</button>
-            </div>
-            <div class="image-container">
-              <img src="./images/why-us.png">
-            </div>
+          <div class="inner-container">
+            <h2>How investing with us works</h2>
+            <h3>We keep it simple for you.</h3>
+            <ol>
+              <li>
+                <h3>1.</h3>
+                <p>
+                  Tell us about your current financial situation and your goals.
+                </p>
+              </li>
+              <li>
+                <h3>2.</h3>
+                <p>
+                  Based on your goals and risk appetite, we will build an investment
+                  plan tailored to you.
+                </p>
+              </li>
+              <li>
+                <h3>3.</h3>
+                <p>Our investment plan will adapt according to the state of economy and your standing instructions.</p>
+              </li>
+              <li>
+                <h3>4.</h3>
+                <p>You can manage your account on both our desktop and mobile apps, anytime and anywhere.</p>
+              </li>
+              <li>
+                <h3>5.</h3>
+                <p>We keep the expense and management fees competitively low and use robust investment framework to monitor your portfolio everyday while you focus on achieving your dreams.</p>
+              </li>
+            </ol>
+            <button class="button-c">Invest Now</button>
+          </div>
+          <div class="image-container">
+            <img src="./images/why-us.png">
           </div>
         </div>
       </section>
       <!-- 4 portfolio. Income, Thematic, Cash -->
-      <section class="portfolio">
+      <section class="portfolio-section">
         <div class="portfolio-container">
           <h2>Our Portfolios</h2>
           <div class="portfolio-grid-container">
             <div class="portfolio p1">
               <div class="image-container">
-                <img>
+                <img src="./images/balanced.jpg">
               </div>
               <div class="portfolio-desc">
-                <h3></h3>
-                <p></p>
+                <h3>Balanced</h3>
+                <p>Invest in sound top of the class equities and bonds that will grow your wealth.</p>
               </div>
             </div>
             <div class="portfolio p2">
               <div class="image-container">
-                <img>
+                <img src="./images/income.jpg">
               </div>
               <div class="portfolio-desc">
-                <h3></h3>
-                <p></p>
+                <h3>Income</h3>
+                <p>Invest in bonds, Reits and equities that will generate cash income and protect your downside</p>
               </div>
             </div>
             <div class="portfolio p3">
               <div class="image-container">
-                <img>
+                <img src="./images/thematic.jpg">
               </div>
               <div class="portfolio-desc">
-                <h3></h3>
-                <p></p>
+                <h3>Thematic</h3>
+                <p>Invest in themes that are game changers in the long run.</p>
               </div>
             </div>
             <div class="portfolio p4">
               <div class="image-container">
-                <img>
+                <img src="./images/cash.jpg">
               </div>
               <div class="portfolio-desc">
-                <h3></h3>
-                <p></p>
+                <h3>Cash</h3>
+                <p>Park your excess cash here to earn higher interest rate with no management or set up fee.</p>
               </div>
             </div>
           </div>
+          <button class="button-c">Start Investing</button>
         </div>
       </section>
       <!-- Our team -->
