added founder section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               with our intelligent investment framework. The result? A financial
               future that you want and can count on.
             </p>
-            <button class="button-c">Get Started</button>
+            <button href="#" class="button-c">Get Started</button>
           </div>
           <div class="image-container intro-img-container">
             <img id="intro-img" src="./images/intro-img.jpg" />
@@ -108,7 +108,7 @@
                 <p>We keep the expense and management fees competitively low and use robust investment framework to monitor your portfolio everyday while you focus on achieving your dreams.</p>
               </li>
             </ol>
-            <button class="button-c">Invest Now</button>
+            <button href="#" class="button-c">Invest Now</button>
           </div>
           <div class="image-container">
             <img src="./images/why-us.png">
@@ -157,10 +157,38 @@
               </div>
             </div>
           </div>
-          <button class="button-c">Start Investing</button>
+          <button href="#" class="button-c">Start Investing</button>
         </div>
       </section>
       <!-- Our team -->
+      <section class="team-section">
+        <div class="team">
+          <h2>Our founders</h2>
+          <div class="team-flex-container">
+            <div class="member m1">
+              <div class="image-container">
+                <img src="./images/founder1.jpg">
+              </div>
+              <h3>Tom Holland, CEO</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolore incidunt blanditiis cupiditate corrupti commodi non voluptates placeat necessitatibus facilis, ullam, sint cum deserunt enim ea mollitia. Officia, accusamus magnam!</p>
+            </div>
+            <div class="member m2">
+              <div class="image-container">
+                <img src="./images/founder2.jpg">
+              </div>
+              <h3>Tom Cruise, CIO</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolore incidunt blanditiis cupiditate corrupti commodi non voluptates placeat necessitatibus facilis, ullam, sint cum deserunt enim ea mollitia. Officia, accusamus magnam!</p>
+            </div>
+            <div class="member m3">
+              <div class="image-container">
+                <img src="./images/founder3.jpg">
+              </div>
+              <h3>Tom Hanks, CTO</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolore incidunt blanditiis cupiditate corrupti commodi non voluptates placeat necessitatibus facilis, ullam, sint cum deserunt enim ea mollitia. Officia, accusamus magnam!</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="script.js"></script>
