--- a/index.html
+++ b/index.html
@@ -190,7 +190,21 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-section">
+        <h3>Connect</h3>
+        <hr>
+        <ul>
+          <li>Contact Us</li>
+          <li>Facebook</li>
+          <li>LinkedIn</li>
+          <li>Instagram</li>
+          <li>Whatsapp</li>
+        </ul>
+        <hr>
+        <p>Designed and developed by Tan Xianglong &copy</p>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
